--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,11 @@
 }
 
 .appWrapper {
+  font-size: 1.3rem;
+
   width: 70%;
   min-width: 800px;
-  margin: 0 auto;
+  margin: 30px auto;
+
+  box-shadow: 0 10px 30px 0 rgba(0, 0, 0, 0.3);
 }
