--- a/src/componets/Footer/Footer.module.css
+++ b/src/componets/Footer/Footer.module.css
@@ -1,6 +1,11 @@
 .wrapper {
   display: flex;
   justify-content: space-around;
-  width: 800px;
+  width: 100%;
   margin: 0 auto;
+}
+
+.wrapper_style {
+  background-color: rgba(19, 105, 234, 0.392);
+  padding: 20px;
 }
