--- a/src/componets/Footer/Footer.module.css
+++ b/src/componets/Footer/Footer.module.css
@@ -12,6 +12,7 @@
 
 .footerSectionWrapper {
   padding: 10px;
+  text-align: center;
 }
 
 .footerSectionWrapper button {
@@ -21,11 +22,12 @@
 
   padding: 5px 15px;
   margin: 10px 0;
-  min-width: 135px;
+  width: 140px;
+
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 1.1rem;
+  font-size: 1rem;
   color: azure;
   box-shadow: 0 6px 8px rgba(0, 0, 0, 0.321);
 }
