--- a/src/componets/Todos/Todos.module.css
+++ b/src/componets/Todos/Todos.module.css
@@ -14,3 +14,14 @@
 .wrapper_style {
   padding: 40px;
 }
+
+.wrapper input[type='text'] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 0px;
+  font-size: 1rem;
+  box-sizing: border-box;
+}
